Update .gitignore and remove unwanted files

--- a/MyLibrary/.gitignore
+++ b/MyLibrary/.gitignore
@@ -6,3 +6,7 @@ xcuserdata/
 DerivedData/
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 *.xcconfig
+/.swiftpm
+/.vs
+/.vscode
+*.profraw
