Alexis/add tests (#3)
- Weather model unit tests verify that the model is able to correctly parse out the desired temperature from the JSON
- Integration tests for WeatherServiceImpl confirm that the class works as expected with the API server and the MyLibrary class
- In order to write integration tests for WeatherServiceImpl, I added some functionality to the WeatherServiceImpl class to make use of a Express JS mock of the server when it is initialized with these options
- Removed secrets, unnecessary files, and fixed file hierarchy

--- a/MyLibrary/.gitignore
+++ b/MyLibrary/.gitignore
@@ -5,3 +5,8 @@
 xcuserdata/
 DerivedData/
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+*.xcconfig
+/.swiftpm
+/.vs
+/.vscode
+*.profraw
