--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: Run Unit and Integration Tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "alexis/add-CI"]
   pull_request:
     branches: [ "main" ]
 
