--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+# This workflow builds and tests the Swift package.
+# To fulfill the dependency on the mock server, it clones the code from that repo, sets up node.js environment,
+#   and runs the mock-server in the background to communicate with the Swift tests
+# API key secrets are handled with Github repository secret feature.
 
-name: Run Unit and Integration Tests
+name: Swift Build and Test (Unit and Integration with API server)
 
 on:
   push:
@@ -16,7 +18,6 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
