--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,13 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+# This workflow builds and tests the Swift package.
+# To fulfill the dependency on the mock server, it clones the code from that repo, sets up node.js environment,
+#   and runs the mock-server in the background to communicate with the Swift tests
+# API key secrets are handled with Github repository secret feature.
 
-name: Run Unit and Integration Tests
+name: Swift Build and Test (Unit and Integration with API server)
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main"]
   pull_request:
     branches: [ "main" ]
 
@@ -16,7 +18,6 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
@@ -24,18 +25,18 @@ jobs:
     - name: Get mock-api source code
       run: |
         git clone https://github.com/adeviney/mock-api-weather.git
-        cd mock-api-weather
     
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Install Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
         
     - name: Install dotenv
+      working-directory: ./mock-api-weather
       run: npm install dotenv --save
       
     - name: Create .env file
+      working-directory: ./mock-api-weather
       run: |
           pwd
           touch .env
@@ -43,15 +44,18 @@ jobs:
           cat .env
       
     - name: Run Mock Server in background
+      working-directory: ./mock-api-weather
       run: node app.js &
     
     - name: Swift Build
-      run: |
-        cd ..
-        pwd
-        swift build -v
+      working-directory: ./MyLibrary
+      run: swift build -v
         
 
     - name: Swift Run tests
-      run: swift test -v
+      working-directory: ./MyLibrary
+      run: |
+        export API_KEY=${{ secrets.API_KEY }}
+        swift test -v
+    
     
