updated .gitignore to ignore .xcworkspace dir

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 cs561.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
 cs561.xcworkspace/xcuserdata/*.xcuserdatad/*
 .DS_Store
+*.xcworkspace
+/.swiftpm
